# pyarrow-dataset-samples

./: README.md
arrow-zero-copy-pandas-query-billions-rows/: README.md  benchmark_zero_copy_arrow.py  pyproject.toml
pyarrow-dataset-tricks/: README.md  generate_bids.py  main.py  pyproject.toml
pyarrow-dataset-tricks/analytics/bids/country=DE/ds=2025-11-21/: b9f8d6b05c264d1390534196a1841f73-0.parquet
python-arrow-pipelines-zero-copy/: README.md  generate_events.py  main.py  pyproject.toml
python-arrow-pipelines-zero-copy/data/events/: events_part_00000.parquet
