[project]
name = "arrow-zero-copy-pandas-query-billions-rows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.2",
    "faker>=40.13.0",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "psutil>=7.2.2",
    "pyarrow>=23.0.1",
]
